@@ -1,3 +1,12 @@
+Fri Jan  7 20:30:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSResponder.m: Changed _rightMouseDisplay to take the event
+	as a parameter.
+	* Source/NSMenu.m: Implemented ([-_rightMouseDisplay:]) with various
+	minor supporting changes.
+	* Source/NSMenuView.m: Lots of messing with mouse tracking in support
+	of right-mouse menu popup and somewhat smoother operation.
+
 Fri Jan  7 18:09:15 2000  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Headers/AppKit/NSBrowser.h: Fixed typo.
